<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="12dp"
    android:layout_marginHorizontal="16dp"
    tools:layout_height="300dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="24dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/meme_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_image_content_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meme_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_textview_gradient"
            android:maxLines="3"
            android:padding="18dp"
            android:text="@string/text_placeholder_short"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/text_placeholder_long" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>