<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/on_error_image_desc"
            tools:src="@drawable/internet_problem" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="14dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="@string/unknown_error_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/again_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#43A047"
            app:rippleColor="#BCDDBE"
            app:strokeColor="#43A047"
            app:strokeWidth="1.5dp"
            tools:text="@string/no_internet_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>